框图格式化 (#198)
* Update di-24.3-jie-bsdinstall-yu-bsdconfig.md

* Update di-24.3-jie-bsdinstall-yu-bsdconfig.md

* Update di-23.4-jie-yin-dao-jie-mian.md

* Update SUMMARY.md

* Update SUMMARY.md

* Update di-23.4-jie-yin-dao-jie-mian.md

--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
@@ -1,4 +1,4 @@
-# 第 23.4 节 引导界面
+# 第 23.4 节 引导界面与控制台界面
 
 ## 调整引导选择界面的时间为 2 秒
 
@@ -44,30 +44,31 @@ autoboot_delay="2"
 ```
 
 ```sh
-                ┌─────────────────────┤System Console Screen Saver├─────────────────────┐
-                │ By default, the console driver will not attempt to do anything        │
-                │ special with your screen when it's idle.  If you expect to leave your │
-                │ monitor switched on and idle for long periods of time then you should │
-                │ probably enable one of these screen savers to prevent burn-in.        │
-                │ ┌───────────────────────────────────────────────────────────────────┐ │
-                │ │   1 None    Disable the screensaver                               │ │
-                │ │   2 Blank   Blank screen                                          │ │
-                │ │   3 Beastie "BSD Daemon" animated screen saver (graphics)         │ │
-                │ │   4 Daemon  "BSD Daemon" animated screen saver (text)             │ │
-                │ │   5 Dragon  Dragon screensaver (graphics)                         │ │
-                │ │   6 Fade    Fade out effect screen saver                          │ │
-                │ │   7 Fire    Flames effect screen saver                            │ │
-                │ │   8 Green   "Green" power saving mode (if supported by monitor)   │ │
-                │ │   9 Logo    FreeBSD "logo" animated screen saver (graphics)       │ │
-                │ │   a Rain    Rain drops screen saver                               │ │
-                │ │   b Snake   Draw a FreeBSD "snake" on your screen                 │ │
-                │ │   c Star    A "twinkling stars" effect                            │ │
-                │ │   d Warp    A "stars warping" effect                              │ │
-                │ │   Timeout   Set the screen saver timeout interval                 │ │
-                │ └───────────────────────────────────────────────────────────────────┘ │
-                ├───────────────────────────────────────────────────────────────────────┤
-                │                         [  OK  ]     [Cancel]                         │
-                └───────────────── Choose a nifty-looking screen saver ─────────────────┘
+┌---------------------┤System Console Screen Saver├---------------------┐
+│ By default, the console driver will not attempt to do anything        │
+│ special with your screen when it's idle.  If you expect to leave your │
+│ monitor switched on and idle for long periods of time then you should │
+│ probably enable one of these screen savers to prevent burn-in.        │
+│ ┌-------------------------------------------------------------------┐ │
+│ │   1 None    Disable the screensaver                               │ │
+│ │   2 Blank   Blank screen                                          │ │
+│ │   3 Beastie "BSD Daemon" animated screen saver (graphics)         │ │
+│ │   4 Daemon  "BSD Daemon" animated screen saver (text)             │ │
+│ │   5 Dragon  Dragon screensaver (graphics)                         │ │
+│ │   6 Fade    Fade out effect screen saver                          │ │
+│ │   7 Fire    Flames effect screen saver                            │ │
+│ │   8 Green   "Green" power saving mode (if supported by monitor)   │ │
+│ │   9 Logo    FreeBSD "logo" animated screen saver (graphics)       │ │
+│ │   a Rain    Rain drops screen saver                               │ │
+│ │   b Snake   Draw a FreeBSD "snake" on your screen                 │ │
+│ │   c Star    A "twinkling stars" effect                            │ │
+│ │   d Warp    A "stars warping" effect                              │ │
+│ │   Timeout   Set the screen saver timeout interval                 │ │
+│ └-------------------------------------------------------------------┘ │
+├-----------------------------------------------------------------------┤
+│                         [  OK  ]     [Cancel]                         │
+└----------------- Choose a nifty-looking screen saver -----------------┘
+
 
 ```
 
