--- a/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
+++ b/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
@@ -11,7 +11,7 @@
 ## `bsdconfig` 主菜单
 
 
-如果你已经安装了 FreeBSD，可以使用此菜单对其进行一定程度的自定义，以适应你的自定义配置。最重要的是，你可以使用 pkg 工具加载额外的“第三方”软件，这些软件未包含在基本系统中。需要注意的是，该界面无法连接 WiFi，因为无法输入密码，已经报告 bug——[Cannot select any wifi or input password in bsdconfig](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=229883)。
+如果你已经安装了 FreeBSD，可以使用此菜单对其进行一定程度的自定义，以适应你的自定义配置。最重要的是，你可以使用 pkg 工具加载额外的“第三方”软件，这些软件未包含在基本系统中。
 
 执行命令：
 
@@ -614,6 +614,11 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 
 
 ```
+
+>**注意**
+>
+>该界面无法连接 WiFi，因为无法输入密码，已经报告 bug——[Cannot select any wifi or input password in bsdconfig](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=229883)。
+
 | 菜单 | 说明|
 | --- | --- |
 | X Exit | 退出 |
