--- a/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
+++ b/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
@@ -584,14 +584,14 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 
 | 菜单 | 说明 |
 | --- | --- |
-| 1 Auto | 总线鼠标，PS/2 风格鼠标或 PnP 串口鼠标 |
+| 1 Auto | 总线鼠标，PS/2 风格鼠标、PnP 串口鼠标 |
 | 2 GlidePoint | ALPS GlidePoint 触摸板（串口） |
 | 3 Hitachi | 日立平板（串口） |
 | 4 IntelliMouse | 微软 IntelliMouse（串口） |
-| 5 Logitech | Logitech 协议（旧型号）（串口） |
+| 5 Logitech | 罗技协议（旧款）（串口） |
 | 6 Microsoft | 微软协议（串口） |
 | 7 MM Series | MM 系列协议（串口） |
-| 8 MouseMan | Logitech MouseMan/TrackMan 型号（串口） |
+| 8 MouseMan | 罗技 MouseMan/TrackMan（串口） |
 | 9 MouseSystems | MouseSystems 协议（串口） |
 | A ThinkingMouse | Kensington ThinkingMouse（串口） |
 
