--- a/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
+++ b/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
@@ -103,9 +103,9 @@
 | **PAGE DOWN**  | 在文本显示框中向下滚动一页。                         |  
 | **F1**         | 显示相关的帮助文本。                                 |  
 
-如果你在菜单的边缘看到小的 `"^(-)"` 或 `"v(+)"` 符号，这表示由于屏幕空间不足，当前项目的上方或下方还有更多未显示的内容。在文本显示框中，当前位置以上的文本数量会以百分比形式显示在右下角。使用 **上 ↑ /下 ↓ 箭头键** 可逐行滚动，**PageUp/PageDown** 键可整页滚动。
+如果你在菜单的边缘看到小的 `^(-)` 或 `v(+)` 符号，这表示由于屏幕空间不足，当前项目的上/下方还有更多未显示的内容。在文本显示框中，当前位置以上的文本数量会以百分比形式显示在右下角。使用 **上 ↑ /下 ↓ 箭头键** 可逐行滚动，**PageUp/PageDown** 键可整页滚动。
 
-在菜单中选择 **OK** 将确认其控制的操作。选择 **Cancel** 将取消操作并通常返回上一级菜单。使用 **TAB** 可移动光标并选择按钮。
+在菜单中选择 **OK** 将确认其控制的操作。选择 **Cancel** 将取消操作，然后通常会返回上一级菜单。使用 **TAB** 可移动光标并选择按钮。
 
 大多数界面都有 **Help** 按钮——请善用它！ 它通常提供有用的上下文相关提示，如果你在某个配置菜单中不确定该做什么，请选择 **Help**！
 
