--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
@@ -2,7 +2,7 @@
 
 ## 配置 csh shell 
 
-csh 是 FreeBSD 基本系统内置的 shell，**过去**是 root 用户的默认 shell。
+csh（C shell，灵感来自 C 语言，语言亦类似，作者是 Bill Joy） 是 FreeBSD 基本系统内置的 shell，**过去**是 root 用户的默认 shell。
 
 > **注意**
 >
