删除非原文内容

--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.0-jie-ru-he-ding-yue-freebsd-de-you-jian-lie-biao.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.0-jie-ru-he-ding-yue-freebsd-de-you-jian-lie-biao.md
@@ -29,8 +29,8 @@ FreeBSD 邮件订阅列表在 [https://lists.freebsd.org/](https://lists.freebsd
 - 如果被管理员警告达三次，会被所有邮件列表拉黑。
 - 闲聊去 [https://lists.freebsd.org/subscription/freebsd-chat](https://lists.freebsd.org/subscription/freebsd-chat)
 - 不应该在 2 个以上的邮件列表上发帖。除非必要。
-- 严禁发广告（非 FreeBSD 的），会立刻被 ban。
-- 使用英语。不会的可以用 deepl.com 翻译。
+- 严禁发广告（非 FreeBSD），会立刻被 ban。
+- 使用英语。
 - 严禁个人攻击和谩骂。尊重他人隐私，不要发表私密邮件。
 
 ## FreeBSD 社区准则（CoC）
