初步重写“第 22.0 节 如何订阅 FreeBSD 的邮件列表” (#201)
* 更新 SUMMARY.md

* 更新 di-3.4-jie-ruan-jian-bao-guan-li-qi-pkg-de-yong-fa.md

* 重命名

* 更新 SUMMARY.md

* typo

* 删除非原文内容

* 删除冗余

* 重写

* Update CHANGELOG.md

--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.0-jie-ru-he-ding-yue-freebsd-de-you-jian-lie-biao.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.0-jie-ru-he-ding-yue-freebsd-de-you-jian-lie-biao.md
@@ -1,6 +1,6 @@
 # 第 22.0 节 如何订阅 FreeBSD 的邮件列表
 
-## 简单版本
+## 概述
 
 FreeBSD 邮件订阅列表在 [https://lists.freebsd.org/](https://lists.freebsd.org/) 列出。建议订阅 freebsd-current，几乎所以人都在那里。订阅只需要输入你的邮箱即可，然后你会收到回信，按要求给他列出的邮箱随便发一封包含内容的邮件即可，你应该就会收到订阅成功的提示。如果要从摘要订阅转为全文一般订阅，只需要重新向 Subscribe 的邮件地址（比如 freebsd-doc 是 freebsd-doc+subscribe@freebsd.org）发送任意内容的邮件即可。
 
@@ -8,7 +8,7 @@ FreeBSD 邮件订阅列表在 [https://lists.freebsd.org/](https://lists.freebsd
 
 提交之后，你会收到一则确认电子邮件，可以通过它来跟踪进展情况。保持关注，如果有人要求提供更多信息，记得及时回复，耐心等候，“坐和放宽”，相信你的问题会很快得到解决的！
 
-## 详细版本
+## 图解说明
 
 打开 [https://lists.freebsd.org/](https://lists.freebsd.org/) 找到要订阅的邮件列表（以 freebsd-current 为例）：
 
@@ -26,34 +26,56 @@ FreeBSD 邮件订阅列表在 [https://lists.freebsd.org/](https://lists.freebsd
 
 ## 规则
 
+本节引自 FreeBSD 手册。
+
 - 如果被管理员警告达三次，会被所有邮件列表拉黑。
 - 闲聊去 [https://lists.freebsd.org/subscription/freebsd-chat](https://lists.freebsd.org/subscription/freebsd-chat)
-- 不应该在 2 个以上的邮件列表上发帖。除非必要。
-- 严禁发广告（非 FreeBSD 的），会立刻被 ban。
-- 使用英语。不会的可以用 deepl.com 翻译。
+- 除非必要，不应该在 2 个以上的邮件列表上发帖。
+- 严禁发广告（非 FreeBSD），会立刻被 ban。
+- 使用英语。
 - 严禁个人攻击和谩骂。尊重他人隐私，不要发表私密邮件。
 
 ## FreeBSD 社区准则（CoC）
 
-### 摘要
+- 原文见 [FreeBSD Community Code of Conduct](https://www.freebsd.org/internal/code-of-conduct/)
 
-- 友好耐心
-- 热情好客
-- 体贴
-- 相互尊敬
-- 对他人友善，并注意不要乱说话
-- 持不同见解时多换位思考
+下面是翻译：
 
-### 详细版本
+---
 
-[https://www.freebsd.org/internal/code-of-conduct/](https://www.freebsd.org/internal/code-of-conduct/)
+### FreeBSD 社区行为规范（CoC）
 
-## 说明
+FreeBSD 社区始终致力于成为一个热情和尊重的社区，我们希望在社区发展和演变的过程中，这一点不会改变。为此，我们要求大家遵守一些基本规则：
 
-FreeBSD 基本系统外的第三方程序是由个人或邮件列表维护的，如果需要移植软件，可能没有人回复，需要自行学习一下 port 开发者手册。
+* 友善耐心，
+* 欢迎他人，
+* 体贴他人，
+* 尊重他人，
+* 谨慎选择言辞，对他人保持友善，
+* 当意见不同时，换位思考。
 
-一言以蔽之，FreeBSD 目前的现状是缺钱与缺人，鼓励艰苦奋斗，自力更生……
+这并不是一份禁止行为的详尽清单。请将其理解为一种指导原则，旨在让我们更容易地进行交流和参与社区活动。
 
-附 port 开发者手册
+此行为规范适用于 FreeBSD 项目管理的所有地方。这些地方包括在线聊天、邮件列表、Bug 跟踪器、FreeBSD 事件（如开发者会议和社交活动），以及项目创建的其他社区用来进行沟通的论坛。它适用于您在这些空间中的所有交流和行为，包括电子邮件、聊天、言论、幻灯片、视频、海报、标语，甚至您在这些空间中展示的 T 恤。此外，若在这些空间外发生违反此行为规范的行为，在极端情况下也可能影响某人参与上述地方的能力。
 
-[https://docs.freebsd.org/en/books/porters-handbook/](https://docs.freebsd.org/en/books/porters-handbook/)
+如果您认为某人在违反行为规范，请通过发送电子邮件到 [conduct@FreeBSD.org](mailto:conduct@freebsd.org) 向我们报告。更多详细信息，请参见我们的 [报告指南](https://www.freebsd.org/internal/conduct-reporting/)。
+
+* **友善耐心。**
+* **欢迎他人。** 我们努力成为一个欢迎和支持各种背景和身份的人的社区。这包括但不限于任何种族、民族、文化、国籍、肤色、移民状态、社会和经济阶层、教育水平、性别、性取向、性别认同和表现、年龄、体型、家庭状况、政治信仰、有无宗教信仰、以及心理和身体能力的成员。
+* **体贴他人。** 您的工作将被他人使用，而您也将依赖他人的工作。您做出的任何决定都会影响用户和同事，您应考虑这些后果。请记住，我们是一个全球性的社区，因此您可能并非用别人母语与其交流。
+* **尊重他人。** 我们并不总是意见一致，但不同意见不是不良行为的借口。我们可能会感到沮丧，但我们不能让沮丧变成个人攻击。记住，让人感到不舒服或受到威胁的社区不是一个有生产力的社区。FreeBSD 社区的成员在与其他成员以及与 FreeBSD 社区外的人打交道时，应该保持尊重。
+* **谨慎选择言辞，对他人保持友善。** 不要侮辱或贬低其他参与者。骚扰和其他排他性行为是不可接受的。这包括但不限于：
+  * 针对他人的暴力威胁或语言。
+  * 歧视性笑话和语言。
+  * 发布色情或暴力内容。
+  * 发布（或威胁发布）他人的个人身份信息（“人肉搜索”）。
+  * 个人侮辱，特别是使用种族主义或性别歧视的词汇。
+  * 不受欢迎的性别关注。
+  * 提倡或鼓励上述行为。
+* **一般而言，如果有人要求您停止，请停止。** 在被要求停止后仍继续这种行为被视为骚扰。
+* **当我们意见不合时，尽量理解为何如此。** 社交和技术上的分歧时常发生，FreeBSD 也不例外。重要的是，我们要建设性地解决分歧和不同的观点。请记住，我们是不同的。FreeBSD 的力量来自于其多样化的社区，成员来自各个背景。不同的人对问题有不同的看法。不能理解某人为何持有某个观点，并不意味着他们错了。不要忘记，犯错是人之常情，互相指责没有任何帮助。而应专注于帮助解决问题，并从错误中学习。
+
+#### 有问题吗？
+
+如果您有任何问题，请随时通过电子邮件 [conduct@FreeBSD.org](mailto:conduct@freebsd.org) 联系 FreeBSD 行为规范委员会。
+
