删除“第 24.4 节 禁用 Sendmail”，过期了

--- a/di-25-zhang-twincatbsd/di-25.1-jie-xi-tong-an-zhuang-yu-ji-ben-pei-zhi.md
+++ b/di-25-zhang-twincatbsd/di-25.1-jie-xi-tong-an-zhuang-yu-ji-ben-pei-zhi.md
@@ -1,4 +1,14 @@
-# 第 25.2 节 TwinCAT/BSD 系统安装与基本配置
+# 第 25.1 节 TwinCAT/BSD 系统安装与基本配置
+
+## 简介
+
+TwinCAT/BSD 是一款由倍福公司开发的基于 FreeBSD 的 PLC 控制的操作系统。个人不使用他们的功能则是完全免费的，倍福支持第三方硬件安装，只不过 license 费按照顶配 PLC 收费：倍福的 license 是根据硬件性能收费，一般的 PLC 是 P40/P50 这个标准，假如一个基本 license1500 元，第三方硬件按照 P90 收费，同样的功能 6000 元左右。
+
+更多内容请参考：
+
+- [GPU 直通](https://github.com/FreeBSD-Ask/freebsd-journal-cn/blob/main/2023-0304/GPU%20Passthrough.md)
+- [TwinCAT/BSD for Industrial PCs](https://www.beckhoff.com/en-en/products/ipc/software-and-tools/twincat-bsd/)
+
 
 ## 下载
 
@@ -151,4 +161,18 @@ doas su
 
 ![TCBSD](../.gitbook/assets/tcbsd2.png)
 
+
+## 故障排除
+
+### 设置静态 IP 后，网卡存在两个 IP
+
+为一个网卡设置静态 IP 后，该网卡会有两个 IP：一个是静态 IP ，一个是 DHCP 服务分配的 IP 。这是倍福由于开机启动的 dhcpcd 服务的缺陷导致，更改 /etc/rc.conf 可解决:
+
+修改或加入：
+
+```sh
+dhcpcd_flags="--denyinterfaces igb0"
+```
+
+即将 `dhcpcd_flags` 的值由 `--waitip` 改为 `--denyinterfaces igb0` 。`igb0` 为需要配置静态 IP 的网卡名，请根据实际情况更改。
 
