--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
@@ -1,5 +1,82 @@
 # 第 15.1 节 网络参数配置命令
 
+
+## 网络配置
+
+先 `ifconfig` 看看有没有网卡，没有那就不属于本节的范围之内了。请注意 `lo0` 并不是真实网卡，如果你只能看到这个说明你网卡没有被正确驱动。
+
+示例输出：
+
+```sh
+root@ykla:~ # ifconfig
+genet0: flags=8843<UP,BROADCAST,RUNNING,SIMPLEX,MULTICAST> metric 0 mtu 1500
+	options=68000b<RXCSUM,TXCSUM,VLAN_MTU,LINKSTATE,RXCSUM_IPV6,TXCSUM_IPV6>
+	ether dc:a6:1a:2e:f4:4t
+	inet 192.168.123.157 netmask 0xffffff00 broadcast 192.168.123.255
+	media: Ethernet autoselect (1000baseT <full-duplex>)
+	status: active
+	nd6 options=29<PERFORMNUD,IFDISABLED,AUTO_LINKLOCAL>
+lo0: flags=8049<UP,LOOPBACK,RUNNING,MULTICAST> metric 0 mtu 16384
+	options=680003<RXCSUM,TXCSUM,LINKSTATE,RXCSUM_IPV6,TXCSUM_IPV6>
+	inet6 ::1 prefixlen 128
+	inet6 fe80::1%lo0 prefixlen 64 scopeid 0x2
+	inet 127.0.0.1 netmask 0xff000000
+	groups: lo
+	nd6 options=21<PERFORMNUD,AUTO_LINKLOCAL>
+root@ykla:~ #
+```
+
+以下内容同时适用于虚拟机和物理机。
+
+默认情况下，FreeBSD 是正常联网的，如果不能可能是因为没有正确配置 DNS。
+
+```sh
+# ee /etc/resolv.conf
+```
+
+清空里面原有内容。添加以下内容.
+
+```sh
+nameserver 223.5.5.5 # 阿里 DNS，下同
+nameserver 223.6.6.6
+nameserver 8.8.8.8   # 谷歌 DNS，境外设备才用
+```
+
+之后重启一下网络配置
+
+```sh
+# /etc/netstart restart
+```
+
+尝试 ping 一下 163.com。（按下 ctrl + C 可中断）
+
+示例输出：
+
+```sh
+root@ykla:~ # ping 163.com
+PING 163.com (123.58.180.7): 56 data bytes
+64 bytes from 123.58.180.7: icmp_seq=0 ttl=55 time=30.617 ms
+64 bytes from 123.58.180.7: icmp_seq=1 ttl=55 time=30.608 ms
+64 bytes from 123.58.180.7: icmp_seq=2 ttl=55 time=30.633 ms
+**Ctrl** +C
+--- 163.com ping statistics ---
+3 packets transmitted, 3 packets received, 0.0% packet loss
+round-trip min/avg/max/stddev = 30.608/30.619/30.633/0.010 ms
+root@ykla:~ #
+```
+
+网络连通。
+
+
+### 将网卡设为混杂模式
+
+```sh
+ifconfig_xxx="inet x.x.x.x netmask x.x.x.x promisc"
+```
+
+### 参考文献
+- [ifconfig(8)](https://man.freebsd.org/cgi/man.cgi?ifconfig(8))
+
 ## `/etc/rc.conf` 相关
 
 `/etc/rc.conf`：
