--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.2-jie-freebsd-duo-ying-pan-efi-yin-dao-tong-yi.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.2-jie-freebsd-duo-ying-pan-efi-yin-dao-tong-yi.md
@@ -1,6 +1,6 @@
-# 第 23.2 节 FreeBSD 多硬盘 EFI 引导统一
+# 第 23.2 节 FreeBSD EFI 引导管理
 
-何谓多硬盘 EFI 统一？假设有两块硬盘，两块硬盘上都分别有一个 EFI 分区，一个分区里是 FreeBSD，另一个是 Windows。
+现在假设有两块硬盘，两块硬盘上都分别有一个 EFI 分区，一个分区里是 FreeBSD，另一个是 Windows。
 
 现在只想保留一个 EFI 分区，即想把 EFI 配置文件放到一块硬盘的 EFI 分区里统一管理。
 
