--- a/di-24-zhang-freebsd-te-se/di-24.2-jie-li-yong-jiao-ben-zi-dong-sheng-cheng-bsdlibc-ku-wen-ben.md
+++ b/di-24-zhang-freebsd-te-se/di-24.2-jie-li-yong-jiao-ben-zi-dong-sheng-cheng-bsdlibc-ku-wen-ben.md
@@ -1,15 +1,15 @@
-# 第 24.5 节 利用脚本自动生成 BSDlibc 库文本
+# 第 24.2 节 利用脚本自动生成 BSDlibc 库文本
 
 ## 论坛方案
 
-> 此部分来自 FreeBSD 论坛，作者 mrclksr。原文地址 [https://forums.freebsd.org/threads/wheres-bsd-libc-documentation.63107/](https://forums.freebsd.org/threads/wheres-bsd-libc-documentation.63107/)。
+此部分来自 FreeBSD 论坛，作者 mrclksr。原文地址 [https://forums.freebsd.org/threads/wheres-bsd-libc-documentation.63107/](https://forums.freebsd.org/threads/wheres-bsd-libc-documentation.63107/)。
 
 首先安装依赖：
 
 ```sh
 # pkg install netpbm groff ghostscript9-base 
 ```
-**ghostscript9-base** 已弃用。**ghostscript10** 替代不了，会卡住。
+**ghostscript9-base** 已弃用。**ghostscript10** 替代不了，会卡住。该方案已经失去可行性。
 
 然后执行该脚本：
 
