--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
@@ -35,7 +35,7 @@
 $ java -jar HMCL*.jar
 ```
 
-不是所有的 Minecraft 版本都支持，适配版本请参考[平台支持状态](https://github.com/HMCL-dev/HMCL/blob/main/PLATFORM_cn.md)。
+不是所有的 Minecraft 版本都受支持，适配版本请参考[平台支持状态](https://github.com/HMCL-dev/HMCL/blob/main/PLATFORM_cn.md)。
 
 其他设置同其他平台，不再赘述。
 
@@ -75,7 +75,7 @@ $ java -jar HMCL*.jar
 # make install clean
 ```
 
-查看配置信息：
+- 查看配置信息：
 
 ```sh
 root@ykla:/usr/ports/games/minecraft-server # pkg info -D minecraft-server
@@ -120,7 +120,7 @@ $ /usr/local/bin/minecraft-server
 
 提示需要同意许可协议，将 `/usr/local/etc/minecraft-server/eula.txt` 里面的 `eula=false` 改成 `eula=true`。
 
-再次运行 `$ /usr/local/bin/minecraft-server`：
+- 再次运行 `$ /usr/local/bin/minecraft-server`：
 
 ```sh
 root@ykla:/usr/ports/games/minecraft-server # /usr/local/bin/minecraft-server
@@ -152,7 +152,7 @@ Starting net.minecraft.server.Main
 
 `/usr/local/etc/minecraft-server/server.properties` 将其中的 `online-mode=false` 改成 `online-mode=true`
 
-然后再次运行服务器：
+- 然后再次运行服务器：
 
 ```sh
 root@ykla:/usr/ports/games/minecraft-server # /usr/local/bin/minecraft-server
@@ -179,7 +179,6 @@ Starting net.minecraft.server.Main
 [18:47:53] [Server thread/INFO]: Done (1.709s)! For help, type "help"
 [18:48:34] [Server thread/INFO]: ykla[/127.0.0.1:37462] logged in with entity id 39 at (-1.5, 63.0, 1.5)
 [18:48:34] [Server thread/INFO]: ykla joined the game
-
 ```
 
 ![FreeBSD 玩 Minecraft](../.gitbook/assets/mc3.png)
@@ -220,20 +219,22 @@ Starting net.minecraft.server.Main
 
 ### 操作
 
-1.安装 renpy
+- 安装 renpy
+
+使用 pkg：
 
 ```sh
 # pkg install renpy
 ```
 
-或者：
+或者使用 Ports：
 
 ```sh
 # cd /usr/ports/games/renpy/ 
 # make install clean
 ```
 
-2. 下载游戏
+- 下载游戏
 
     这里以[《心跳文学部！》](https://teamsalvato.itch.io/ddlc)为例，其它游戏也可同样操作。选择附有 Linux 版本的游戏解压。
 
@@ -241,7 +242,7 @@ Starting net.minecraft.server.Main
 >
 >《心跳文学部！》是一款恐怖游戏，并可能会致郁！由于编者对此处并不熟悉，请求社区用其他游戏进行替换，可 PR。
 
-3. 运行 renpy
+- 运行 renpy
 
     在引擎界面左侧`工程(Projects)`处可以看到列出来刷新的游戏`DDLC-1.1.1`，点击该游戏后，选择右下角的`启动工程(Launch Project)`即可加载游戏。
 
@@ -255,13 +256,13 @@ Starting net.minecraft.server.Main
 - rpa 文件解包：[unrpa](https://github.com/Lattyware/unrpa)
 
 ```python
-python3 unrpa -mp "解包目录" "XXX.rpa"
+$ python3 unrpa -mp "解包目录" "XXX.rpa"
 ```
 
 - rpyc 文件解包：[unrpyc](https://github.com/CensoredUsername/unrpyc)
 
 ```python
-python3 unrpyc -c "XXX.rpyc"
+$ python3 unrpyc -c "XXX.rpyc"
 ```
 
   这一步非必要，仅为了方便翻译成其它语言。
@@ -281,14 +282,14 @@ python3 unrpyc -c "XXX.rpyc"
 # cd /usr/ports/devel/godot/ && make install clean
 ```
 
-安装好以后新建项目，进入编辑器，你可能会发现非常卡，CPU 占用高。这是因为此时 Godot 的渲染是 CPU 在处理，而且交给了单个线程。  
-你需要给 `godot-tool` 加一个启动参数:
+安装好以后新建项目，进入编辑器，你可能会发现非常卡，CPU 占用高。这是因为此时 Godot 的渲染是 CPU 在处理，而且交给了单个线程。你需要给 `godot-tool` 加一个启动参数:
 
 ```sh
 $ godot-tool --rendering-driver opengl3
 ```
 
-这样进入打开项目 Godot 编辑器以后，打开 KDE 或 Gnome 的系统监视器，缩放 Godot 窗口，就会发现 CPU 的占用没有明显变化，这说明渲染工作已经交给了 GPU.  
+这样进入打开项目 Godot 编辑器以后，打开 KDE 或 Gnome 的系统监视器，缩放 Godot 窗口，就会发现 CPU 的占用没有明显变化，这说明渲染工作已经交给了 GPU。
+
 除此之外，还需要注意的是工程的创建，如果你遇到了上面的卡顿问题，并且使用了强制 OpenGL 参数，在创建项目的时候应该选择“兼容”，而不是 Forward+ 或移动，因为只有“兼容”才使用 OpenGL3 后端，那两个都是 RenderingDevice，这个可以在窗口中的介绍看到。
  
 ![图片](https://github.com/FreeBSD-Ask/FreeBSD-Ask/assets/138698339/335335ca-3994-48ec-99f5-be20c5668f8d)
