独立参考资料

--- a/di-26-zhang-openbsd/di-26.1-jie-gai-shu.md
+++ b/di-26-zhang-openbsd/di-26.1-jie-gai-shu.md
@@ -36,7 +36,7 @@ OpenBSD 软件包较少，过时的软件包都被移除了，新的来不及移
 
 OpenBSD 默认使用的文件系统 FFS 其实和 FreeBSD 的 UFS 是一回事，在挂载参数上都没有任何区别。
 
-参考资料：
+### 参考资料
 
 - [ffs -- Berkeley fast file system](https://man.freebsd.org/cgi/man.cgi?ffs(7))
 
