--- a/di-23-zhang-netbsd/di-23.1-jie-gai-shu.md
+++ b/di-23-zhang-netbsd/di-23.1-jie-gai-shu.md
@@ -1,10 +1,11 @@
 # 第 23.1 节 NetBSD 概述
 
-如果您想捐赠 NetBSD：[Donate using Stripe](https://www.netbsd.org/stripe.html)，支持中国银联。Google Pay 等多种支付方式。
+NetBSD 的[口号](https://www.netbsd.org/about/portability.html)是“Of course it runs NetBSD”（它当然可以运行 NetBSD）。
 
-NetBSD 支持多个架构。使用如此极客的一款操作系统对于用户来说却是一件非常困难的事情，用户几乎也全都是开发者，而开发者也几乎构成了所有的用户。
+NetBSD [支持多个架构](https://wiki.netbsd.org/ports/)。目前 NetBSD 支持 9 个一级架构、49 个二级架构。使用如此极客的一款操作系统对于用户来说却是一件非常困难的事情，用户几乎也全都是开发者，而开发者也几乎构成了所有的用户。
 
 NetBSD 有 Linux 兼容层。
 
 驱动方面自带了 i915 显卡及 AMD 相关驱动，支持 UEFI NVMe。
 
+如果您想捐赠 NetBSD：[Donate using Stripe](https://www.netbsd.org/stripe.html)，支持中国银联、Google Pay 等多种支付方式。
