--- a/di-21-zhang-linux-jian-rong-ceng/di-21.3-jie-linux-jian-rong-ceng-ji-yu-ubuntudebian.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.3-jie-linux-jian-rong-ceng-ji-yu-ubuntudebian.md
@@ -6,11 +6,7 @@
 
 ![](../.gitbook/assets/UbuntuonBSD.png)
 
-以下教程在 14.2-RELEASE 测试通过。兼容层使用技术实际上是 Linux jail，并非 chroot。
-
-类似的方法可以构建 Debian 兼容层。
-
-更多其他系统请看`/usr/local/share/debootstrap/scripts/`。
+以下教程在 14.2-RELEASE 测试通过。类似的方法可以构建 Debian 兼容层。更多其他系统请看 `/usr/local/share/debootstrap/scripts/`。
 
 ### 开始构建（基于 Ubuntu 22.04 LTS）
 
