--- a/di-16-zhang-fu-wu-qi/di-16.2-jie-minio-dui-xiang-cun-chu-fu-wu.md
+++ b/di-16-zhang-fu-wu-qi/di-16.2-jie-minio-dui-xiang-cun-chu-fu-wu.md
@@ -1,7 +1,6 @@
 # 第 16.2 节 MinIO 对象存储服务
 
-
-MinIO 是一个由 Golang 编写的、与 S3 兼容的对象存储服务。
+MinIO 是一款由 Golang 编写，兼容 Amazon S3 的对象存储服务。
 
 ## 单机部署
 
@@ -20,26 +19,34 @@ MinIO 是一个由 Golang 编写的、与 S3 兼容的对象存储服务。
 
 ### 配置
 
-1. 启用 MinIO。
+### 启用 MinIO。
 
 ```sh
-# sysrc minio_enable=yes
+# service minio enable
 ```
 
-1. 设置 MinIO 存储路径。此处路径配置需重点关注，手动创建文件夹会有权限问题，最好是让 minio 服务自动创建相关文件夹。
+### 设置 MinIO 存储路径。
+  
+>**注意**
+>
+>此处路径：不要手动创建文件夹，会有权限问题。应该让 minio 服务自动创建相关文件夹。
 
 ```sh
 # sysrc minio_disks=/mnt/minio # 此处路径根据自己的需要配置
 ```
 
-3. 自定义 MinIO 服务端口。MinIO 会启动两个服务端口，分别是 `address` 和 `console_address`。其中 `address` 服务端口默认为 9000，而 `console_address` 服务端口默认是随机的。
+### 自定义 MinIO 服务端口。
+
+MinIO 会启动两个服务端口，分别是 `address` 和 `console_address`。其中 `address` 服务端口默认为 9000，而 `console_address` 服务端口默认是随机的。
 
 ```sh
 # sysrc minio_address=":9100" # 此端口默认为 9000，我这里修改为 9100
 # sysrc minio_console_address=":9101" # 此端口如果不配置，服务重启后会随机变化，我这里设置为 9101
 ```
 
-4. 更多相关的参数配置可以在 `/usr/local/etc/rc.d/minio` 文件中找到。
+#### 参考文献
+
+可以在 `/usr/local/etc/rc.d/minio` 文件中找到更多相关的参数配置。
 
 ### 启动
 
@@ -47,5 +54,18 @@ MinIO 是一个由 Golang 编写的、与 S3 兼容的对象存储服务。
 # service minio start
 ```
 
-启动完成后访问地址为 [http://localhost:9100](http://localhost:9100)。
+启动完成后访问地址为 `IP:9100` 比如：<http://localhost:9100>。
 
+![minio 登录界面](../.gitbook/assets/minio1.png)
+
+登录：
+- 默认用户名（Username）：`minioadmin`
+- 默认密码（Password）：`minioadmin`
+
+![minio 主界面](../.gitbook/assets/minio2.png)
+
+## 故障排除
+
+- 不支持中文
+
+参见 [Adding Internationalization Support](https://github.com/minio/console/issues/860)
