--- a/di-14-zhang-wang-luo-guan-li/di-14.4-jie-lan-ya.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.4-jie-lan-ya.md
@@ -1,19 +1,34 @@
 # 第 14.4 节 蓝牙
 
-由 iwm 驱动的网卡可以安装 `comms/iwmbt-firmware` 这个包来驱动蓝牙。蓝牙走 USB 总线，使用 `usbconfig` 可查看所有设备，包括蓝牙，如 `ugen1.5` 是蓝牙，则： `iwmbtfw -d ugen1.5`。
+由 iwm 驱动的网卡可以安装 `comms/iwmbt-firmware` 这个包来驱动蓝牙：
+
+- 使用 pkg 安装：
+
+```sh
+# pkg install iwmbt-firmware
+```
+
+- 使用 Ports 安装：
+
+```sh
+# cd /usr/ports/comms/iwmbt-firmware/ 
+# make install clean
+```
+
+蓝牙走 USB 总线，使用 `usbconfig` 可查看所有设备，包括蓝牙，如 `ugen1.5` 是蓝牙，则： `iwmbtfw -d ugen1.5`。
 
 ## 无线蓝牙鼠标的设置
 
 本文基于 FreeBSD 13.0，罗技 m337。
 
 ```sh
-# sysrc hcsecd_enable="YES"
-# sysrc bthidd_enable="YES"
+# service hcsecd enable
+# service bthidd enable
 # service hcsecd start
 # service bthidd start
 ```
 
-使用`bluetooth-config`工具添加蓝牙设备即可。
+使用 `bluetooth-config` 工具添加蓝牙设备即可。
 
 蓝牙鼠标调到配对模式，运行`# bluetooth-config scan`，按提示信息进行添加：
 
@@ -28,6 +43,10 @@ This device provides human interface device services.
 Set it up? [yes]:
 ```
 
-> **注意**
->
->  logitech m337 配对连接后会自动断开。解决方案：删除 `/var/db/bthidd.hids` 文件中对应鼠标的 `bd_addr` 行 `xx:xx:xx:xx:xx`，重启 `bthidd` 服务 `# service bthidd restart`。
+## 故障排除
+
+- logitech m337 配对连接后会自动断开。
+
+解决方案：删除 `/var/db/bthidd.hids` 文件中对应鼠标的 `bd_addr` 行 `xx:xx:xx:xx:xx`。重启 `bthidd` 服务 `# service bthidd restart`。
+
+
