--- a/di-16-zhang-fu-wu-qi/di-16.4-jie-shi-jian-fu-wu.md
+++ b/di-16-zhang-fu-wu-qi/di-16.4-jie-shi-jian-fu-wu.md
@@ -1,15 +1,15 @@
 # 第 16.12 节 时间服务
 
-&#x20;目的：
+时间服务作用：
+ - 配置时区
+ - 同步时间
 
-- 配置时区
-- 同步时间
 
-## 选择正确时区
+## 配置时区
 
-### 安装操作系统的时候选择正确的时区
+- 使用 `bsdconfig` 设置时区。
 
-### 配置时区
+- 或命令行：
 
 ```sh
 # cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
@@ -17,10 +17,10 @@
 
 ## 配置同步时间
 
-### 设置 ntp 服务可用
+### 设置启动 ntp 服务
 
 ```sh
-# sysrc ntpd_enable="YES"
+# service ntpd enable
 ```
 
 ### 设置 ntp 服务开机时候启动
@@ -29,7 +29,7 @@
 # sysrc ntpd_sync_on_start="YES"
 ```
 
-### 编辑 `ntp.conf文件`
+### 编辑 `ntp.conf` 文件
 
 ```sh
 # ee /etc/ntp.conf
@@ -44,30 +44,15 @@ server 1.cn.pool.ntp.org
 server 2.cn.pool.ntp.org
 server 3.cn.pool.ntp.org
 ```
+### 服务
 
-### 设置 ntp 服务开机自启动（上面已设置，此处可选）
+- 启动 ntp 服务
 
-```sh
-# /etc/rc.d/ntpd enable
-或
-# service ntpd enable
 ```
-
-### 启动 ntp 服务
-
-```sh
-# /etc/rc.d/ntpd start
-或
 # service ntpd start
 ```
 
-### 重启 ntp 服务
-
-```sh
-# /etc/rc.d/ntpd restart
-```
-
-或
+- 重启 ntp 服务
 
 ```sh
 # service ntpd restart
@@ -76,7 +61,8 @@ server 3.cn.pool.ntp.org
 ### 显示当前时间
 
 ```sh
-# date
+$ date
+2025年 3月22日 星期六 15时27分29秒 CST
 ```
 
 ### 手动同步时间（可选）
@@ -84,6 +70,9 @@ server 3.cn.pool.ntp.org
 ```sh
 # ntpdate time.windows.com
 ```
+
+- 当时间相差较大时必须使用该命令，其他命令不会生效：
+
 ```sh
-# ntpdate -u pool.ntp.org # 当时间相差较大时必须使用该命令，其他命令不会生效
+# ntpdate -u pool.ntp.org
 ```
