--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
@@ -1,7 +1,18 @@
 # 第 15.1 节 网络参数配置命令
 
+## 手动设置 `resolv.conf`
 
-## 网络配置
+手动编辑 `/etc/resolv.conf` 后，重启系统又会被重置，因为 DHCP 会重写这个文件。
+
+防止 `resolvconf` 服务覆盖 `resolv.conf`：
+
+编辑 `/etc/resolvconf.conf`，写入 `resolvconf=NO `
+
+### 参考文献
+
+- [ 8.8.8.8 or 1.1.1.1 if set in etc resolv conf doesn't stay as an entry in the file after a network restart](https://forums.freebsd.org/threads/8-8-8-8-or-1-1-1-1-if-set-in-etc-resolv-conf-doesnt-stay-as-an-entry-in-the-file-after-a-network-restart.85951/)
+
+## `ifconfig`
 
 先 `ifconfig` 看看有没有网卡，没有那就不属于本节的范围之内了。请注意 `lo0` 并不是真实网卡，如果你只能看到这个说明你网卡没有被正确驱动。
 
@@ -26,20 +37,18 @@ lo0: flags=8049<UP,LOOPBACK,RUNNING,MULTICAST> metric 0 mtu 16384
 root@ykla:~ #
 ```
 
-以下内容同时适用于虚拟机和物理机。
-
-默认情况下，FreeBSD 是正常联网的，如果不能可能是因为没有正确配置 DNS。
+## 配置 DNS
 
 ```sh
 # ee /etc/resolv.conf
 ```
 
-清空里面原有内容。添加以下内容.
+清空里面原有内容。添加以下内容：
 
 ```sh
 nameserver 223.5.5.5 # 阿里 DNS，下同
 nameserver 223.6.6.6
-nameserver 8.8.8.8   # 谷歌 DNS，境外设备才用
+nameserver 8.8.8.8   # 谷歌 DNS，境外设备用
 ```
 
 之后重启一下网络配置
@@ -68,7 +77,7 @@ root@ykla:~ #
 网络连通。
 
 
-### 将网卡设为混杂模式
+## 将网卡设为混杂模式
 
 ```sh
 ifconfig_xxx="inet x.x.x.x netmask x.x.x.x promisc"
@@ -129,18 +138,6 @@ ABC_XYZ="ddd"
 ```sh
 net.inet.ip.fw.default_to_accept=1
 ```
-
-## 手动设置 `resolv.conf`
-
-手动编辑 `/etc/resolv.conf` 后，重启系统又会被重置，因为 DHCP 会重写这个文件。
-
-防止 `resolvconf` 服务覆盖 `resolv.conf`：
-
-编辑 `/etc/resolvconf.conf`，写入 `resolvconf=NO `
-
-### 参考文献
-
-- [ 8.8.8.8 or 1.1.1.1 if set in etc resolv conf doesn't stay as an entry in the file after a network restart](https://forums.freebsd.org/threads/8-8-8-8-or-1-1-1-1-if-set-in-etc-resolv-conf-doesnt-stay-as-an-entry-in-the-file-after-a-network-restart.85951/)
 
 ## 查看网卡速率
 
