--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.12-jie-an-zhuang-code-server-he-clangd.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.12-jie-an-zhuang-code-server-he-clangd.md
@@ -64,9 +64,9 @@ EOF
 ## 服务器安装 llvm 与 clangd 插件
 
 ```shell
-pkg install -y llvm
-ln -sf /compat/linux/lib/code-server/bin/code-server /usr/local/bin
-code-server --install-extension llvm-vs-code-extensions.vscode-clangd
+# pkg install -y llvm
+# ln -sf /compat/linux/lib/code-server/bin/code-server /usr/local/bin
+# code-server --install-extension llvm-vs-code-extensions.vscode-clangd
 ```
 
 ## 服务器通过 daemon 命令启动 code-server
@@ -202,11 +202,7 @@ rm -Rf /tmp/root.x86_64
 * 如何在服务器上通过 HTTPS 来提供 code-server 服务
 * 探讨 Linux 兼容层与 Linux Jail 究竟有何区别
 
-### 有什么需要注意的？
-
-* 所有操作都使用 root 用户进行
-* 请勿跳步
-
 ### 你这是在鼓励用户当 root 敢死队？
 
 * 永言配命，自求多福。
+* 风险自负。
