--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md
@@ -1,8 +1,8 @@
 # 第 17.7 节 Telegraf+InfluxDB+Grafana 监控平台
 
-InfluxDB 是一个用于存储和分析时间序列数据的开源数据库。
-
 ## InfluxDB 安装与配置
+
+InfluxDB 是一款用于存储和分析时间序列数据的开源数据库。
 
 ### 安装
 
