--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md
@@ -47,7 +47,7 @@ InfluxDB 是一款用于存储和分析时间序列数据的开源数据库。
 # service influxd restart
 ```
 
-## 创建 influxd 数据库
+### 创建 influxd 数据库
 
 ```sql 
 # influx # 连接数据库
