--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md
@@ -76,7 +76,8 @@ mydb
 或者
 
 ```
-# cd /usr/ports/net-mgmt/telegraf/ && make install clean
+# cd /usr/ports/net-mgmt/telegraf/ 
+# make install clean
 ```
 ### 加入启动项
 
@@ -188,7 +189,7 @@ mydb
    ![grafana-datasource-create](../.gitbook/assets/grafana-datasource-create.png)
 
 - 在数据源配置页面填写相关的 InfluxDB 连接信息，需配置内容如下：
-   >** 注意**
+   >**注意**
    >
    >我们上面使用的是 influxdb1.8，所以选择的查询语言必须选 `InfluxQL`（默认就是）
 
@@ -196,9 +197,10 @@ mydb
 
    ![grafana-influxdb-source-config1](../.gitbook/assets/grafana-influxdb-source-config1.png)
 
+  Database 输入 `mydb`；User 输入 `username`；密码输入 `password`（这些是在创建 influxd 数据库这一步设置的）。
+
    ![grafana-influxdb-source-config2](../.gitbook/assets/grafana-influxdb-source-config2.png)
 
-   Database 输入 `mydb`；User 输入 `username`；密码输入 `password`（这些是在创建 influxd 数据库这一步设置的）。
 
    点击 **`Save & Test`** 按钮保存配置。提示成功链接，并获取了数据：
 
