--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md
@@ -214,9 +214,11 @@ mydb
    
    ![](../.gitbook/assets/grafana-dashboard-import.png)
 
-- 选择 `id` 为 `928` 的模版导入，输入 `928`，再点击“Load”
+- 选择 `id` 为 `928` 的模版导入，输入 `928`，再点击“Load”。
    
    ![](../.gitbook/assets/grafana-dashboard-import-config.png)
+
+  选择我们的数据库。
 
   ![](../.gitbook/assets/grafana-dashboard-import-config2.png)
 
