--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md
@@ -231,3 +231,9 @@ mydb
 Home——>Administration——>General——>Default preferences——>Language，选择简体中文。
 
 ![](../.gitbook/assets/grafana4.png)
+
+## 故障排除
+
+- 内核、网络、CPU 相关信息均不显示。似乎和 Proc 有关。
+
+待解决。
