重写“第 17.7 节 Telegraf+InfluxDB+Grafana 监控平台” (#206)
* 格式化 第 14.4 节 蓝牙

* Update README.md

* 格式化  第 16.12 节 时间服务

* Update di-16.4-jie-shi-jian-fu-wu.md

* Update README.md

* 格式化

* Update README.md

* 格式化

* Update README.md

* 格式化

* Update README.md

* Update di-22.12-jie-an-zhuang-code-server-he-clangd.md

* Update di-22.12-jie-an-zhuang-code-server-he-clangd.md

* Update README.md

* 完全重写 第 17.7 节 Telegraf+InfluxDB+Grafana 监控平台

* 补图

* Update di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md

* Update di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md

* Update di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md

* Update di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md

* Update di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md

* Update di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md

* Update CHANGELOG.md

* Update README.md

* Update di-6.7-jie-zfs-ci-pan-jia-jie-mi.md

* Update di-6.7-jie-zfs-ci-pan-jia-jie-mi.md

* Update README.md

--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md
@@ -1,12 +1,10 @@
 # 第 17.7 节 Telegraf+InfluxDB+Grafana 监控平台
 
-## InfluxDB
+## InfluxDB 安装与配置
 
-InfluxDB 是一个用于存储和分析时间序列数据的开源数据库。
+InfluxDB 是一款用于存储和分析时间序列数据的开源数据库。
 
-### InfluxDB 安装与配置
-
-#### 安装
+### 安装
 
 ```sh
 # pkg install influxdb
@@ -15,63 +13,59 @@ InfluxDB 是一个用于存储和分析时间序列数据的开源数据库。
 或者
 
 ```sh
-# cd /usr/ports/databases/influxdb/ && make install clean
+# cd /usr/ports/databases/influxdb/ 
+# make install clean
 ```
 
-#### 加入启动项
+### 服务管理
+
+- 加入启动项
 
 ```sh
-# sysrc influxd_enable="YES"
+# service influxd enable
 ```
 
-#### 启动服务
+- 启动服务
 
 ```sh
 # service influxd start
 ```
 
-### 修改配置
+### 修改 influxd 配置
 
-配置文件路径为 `/usr/local/etc/influxd.conf`
+你可自行修改 influxd 的配置。
+
+- 配置文件路径为 `/usr/local/etc/influxd.conf`
 
 ```sh
-# vim /usr/local/etc/influxd.conf
+# ee /usr/local/etc/influxd.conf
 ```
 
-修改完成后重启服务：
+- 修改完成后请重启服务：
 
 ```sh
 # service influxd restart
 ```
 
-### 使用
+### 创建 influxd 数据库
 
-### 连接数据库
-
-```sh
-# influx
-```
-
-#### 创建数据库
-
-```sh
-# CREATE DATABASE mydb
-```
-
-#### 查看数据库
-
-```sh
-# SHOW DATABASES
-```
-
-#### 创建用户名和密码
-
-```sh
-# CREATE USER username WITH PASSWORD 'password'
+```sql 
+# influx # 连接数据库
+Connected to http://localhost:8086 version 1.8.10
+InfluxDB shell version: 1.8.10
+> CREATE DATABASE mydb # 创建数据库
+> CREATE USER username WITH PASSWORD 'password' # 创建数据库用户及密码。此处设置的用户名是 username，密码是 password
+> SHOW DATABASES # 查看数据库
+name: databases
+name
+----
+_internal
+mydb
+>
+> quit # 退出数据库
 ```
 
 ## Telegraf
-
 
 ### 安装
 
@@ -82,91 +76,61 @@ InfluxDB 是一个用于存储和分析时间序列数据的开源数据库。
 或者
 
 ```
-# cd /usr/ports/net-mgmt/telegraf/ && make install clean
+# cd /usr/ports/net-mgmt/telegraf/ 
+# make install clean
 ```
-#### 加入启动项
+### 加入启动项
 
 ```sh
-# sysrc telegraf_enable="YES"
+# service telegraf enable
 ```
 
-### 配置
 
-配置文件路径：`/usr/local/etc/telegraf.conf`
-
-#### 配置 influxdb 连接
+### 配置 influxdb 连接
 
 我们用的是 influxdb-1.8 的版本，在配置文件中配置如下内容：
+
+配置文件路径：`/usr/local/etc/telegraf.conf`。
 
 ```sh
 # 配置 influxdb 连接内容，此处的内容和上面配置的 InfluxDB 数据库连接账号密码
 [[outputs.influxdb]]
   urls = ["http://127.0.0.1:8086"]
-  database = "my_db" 
+  database = "mydb" 
   username = "username"
   password = "password"
 ```
 
-#### 配置采集指标
+### 配置采集指标
 
-这里会收集系统 cpu、disk、diskio、memory、swap 等相关指标。下面是 telegraf 配置文件中的部分内容，部分是默认开放，部分需要手动放开注释参数，详情请看[官方文档](https://docs.influxdata.com/telegraf/v1.26/configuration/)。
+配置文件路径：`/usr/local/etc/telegraf.conf`：
+
+这里会收集系统 cpu、disk、diskio、memory、swap 等相关指标。下面是 telegraf 配置文件中的部分内容：部分默认开放，部分需要手动放开注释参数。详情请看[官方文档](https://docs.influxdata.com/telegraf/v1.26/configuration/)。
 
 ```sh
-# Read metrics about cpu usage
-[[inputs.cpu]]
-  ## Whether to report per-cpu stats or not
-  percpu = true
-  ## Whether to report total system cpu stats or not
-  totalcpu = true
-  ## Comment this line if you want the raw CPU time metrics
-  fielddrop = ["time_*"]
-
-# Read metrics about disk usage by mount point
-[[inputs.disk]]
-  ## By default, telegraf gather stats for all mountpoints.
-  ## Setting mountpoints will restrict the stats to the specified mountpoints.
-  # mount_points = ["/"]
-  ## Ignore some mountpoints by filesystem type. For example (dev)tmpfs (usually
-  ## present on /run, /var/run, /dev/shm or /dev).
-  ignore_fs = ["tmpfs", "devtmpfs"]
-
-# Read metrics about disk IO by device
-[[inputs.diskio]]
-  ## By default, telegraf will gather stats for all devices including
-  ## disk partitions.
-  ## Setting devices will restrict the stats to the specified devices.
-  # devices = ["sda", "sdb"]
-  ## Uncomment the following line if you need disk serial numbers.
-  # skip_serial_number = false
-
-# Get kernel statistics from /proc/stat
-[[inputs.kernel]]
-  # no configuration
-
-# Read metrics about memory usage
 [[inputs.mem]]
-  # no configuration
+
+# swap
+[[inputs.swap]]
+
+# disk
+[[inputs.disk]]
+  ignore_fs = ["tmpfs", "devtmpfs", "devfs", "iso9660", "overlay", "aufs", "squashfs"]
+
+# disk IO
+[[inputs.diskio]]
+
+# processes
+[[inputs.processes]]
+
+# system (Uptime and so on)
+[[inputs.system]]
+
+# networking
+[[inputs.net]]
 
 # Get the number of processes and group them by status
 [[inputs.processes]]
-  # no configuration
-
-# Read metrics about swap memory usage
-[[inputs.swap]]
-  # no configuration
-
-# Read metrics about system load & uptime
-[[inputs.system]]
-  # no configuration
-# Read metrics about network interface usage
-[[inputs.net]]
-  # collect data only about specific interfaces
-  # interfaces = ["eth0"]
-
-[[inputs.netstat]]
-  # no configuration
-[[inputs.interrupts]]
-  # no configuration
 ```
 
 ### 启动服务
@@ -177,102 +141,99 @@ InfluxDB 是一个用于存储和分析时间序列数据的开源数据库。
 
 ## Grafana
 
-### 安装
 
-#### 查找 Grafana
-
-```sh
-# pkg search grafana
-```
-
-或者
-
-```
-# cd /usr/ports/www/grafana9/ 
-# make install clean
-```
-
-返回结果如下：
+### 安装 Grafana
 
 ```sh
-grafana-loki-2.8.1             Scalable, highly-available, multi-tenant log aggregation system
-grafana8-8.5.27                Dashboard and graph editor for multiple data stores
-grafana9-9.5.5                 Dashboard and graph editor for multiple data stores
-py39-grafana-dashboard-manager-0.1.3 CLI for saving and restoring Grafana dashboards via HTTP API
-rubygem-aws-sdk-managedgrafana-1.15.0 Official AWS Ruby gem for Amazon Managed Grafana
+# pkg install grafana
 ```
 
-#### 安装
-
-从上面的查询可以看到，有多个版本的 Grafana，这里我们选择 grafana9-9.5.5 这个版本。
+### 设置系统启动
 
 ```sh
-# pkg install grafana9-9.5.5
+# service grafana enable
 ```
 
-#### 设置系统启动
-
-```sh
-# sysrc grafana_enable="YES"
-```
-
-### 启动
-
-#### 启动服务
+### 启动服务
 
 ```sh
 # service grafana start
 ```
 
-### 使用
+### 登录 grafana
 
-#### 登录
+默认的登录地址为：<http://localhost:3000>，
 
-默认的登录地址为：<http://localhost:3000>，默认登录账号密码如下：
+![](../.gitbook/assets/grafana1.png)
 
-```sh
-admin # 账号
-admin # 密码
-```
+- 默认登录账号密码：
+  - Username（用户名）：`admin`
+  - Password（密码）：`admin`
 
-登录后会要求修改密码，请务必使用**强密码**！
+![](../.gitbook/assets/grafana2.png)
 
-#### 配置数据源
+登录后会要求修改密码。
 
-1. 登录后点击左上角的 **Toggle Menu** -> 选择 **Connections** -> 选择 **Connect data**
+### 配置数据源
+
+- 登录后点击左上角的 **Connections** -> 选择 **Connect data**
    
    ![grafana-datasource-add](../.gitbook/assets/grafana-datasource-add.png)
 
-2. 在右边的输入框中输入 `InfluxDB` -> 选择搜索出来的 **InfluxDB**
+- 在右边的输入框中输入 `InfluxDB` -> 选择搜索出来的 **InfluxDB**，点击
    
    ![choose-influxdb](../.gitbook/assets/grafana-datasource-search.png)
 
-3. 点击右上角的 **Create a InfluxDB data source** 按钮 -> 配置 InfluxDB 相关的内容。
+- 点击右上角的 **Add new data source** 按钮 -> 配置 InfluxDB 相关的内容。
    
    ![grafana-datasource-create](../.gitbook/assets/grafana-datasource-create.png)
 
-4. 在数据源配置页面填写相关的 InfluxDB 连接信息，需配置内容如下：
-   > 注意：我们上面使用的是 influxdb1.8，所以选择的查询语言一定要选 InfluxQL
+- 在数据源配置页面填写相关的 InfluxDB 连接信息，需配置内容如下：
+   >**注意**
+   >
+   >我们上面使用的是 influxdb1.8，所以选择的查询语言必须选 `InfluxQL`（默认就是）
+
+   `URL` 输入：`http://localhost:8086`。
 
    ![grafana-influxdb-source-config1](../.gitbook/assets/grafana-influxdb-source-config1.png)
 
+  Database 输入 `mydb`；User 输入 `username`；密码输入 `password`（这些是在创建 influxd 数据库这一步设置的）。
+
    ![grafana-influxdb-source-config2](../.gitbook/assets/grafana-influxdb-source-config2.png)
 
-   点击 **`Save & Test`** 按钮保存配置。
 
-#### 配置 Dashboard
+   点击 **`Save & Test`** 按钮保存配置。提示成功链接，并获取了数据：
+
+  ![grafana-influxdb-source-config3](../.gitbook/assets/grafana-influxdb-source-config3.png)
+
+### 配置 Dashboard
 
 选择展示数据的 dashboard，可以自行开发，也可以[官方模版库](https://grafana.com/grafana/dashboards/)中其他人开发好的模版。这里导入一个 id 为 [928](https://grafana.com/grafana/dashboards/928-telegraf-system-dashboard/) 的模版。
 
-1. 导入模版，点击右上角的 **`+`** -> **`Import dashboard`**  进入导入模版页面。
+- 导入模版，点击右上角的 **`+`** -> **`Import dashboard`**  进入导入模版页面。
    
    ![](../.gitbook/assets/grafana-dashboard-import.png)
 
-2. 选择 id 为 928 的模版导入
+- 选择 `id` 为 `928` 的模版导入，输入 `928`，再点击“Load”。
    
    ![](../.gitbook/assets/grafana-dashboard-import-config.png)
 
-3. 模版最终效果
+  选择我们的数据库。
+
+  ![](../.gitbook/assets/grafana-dashboard-import-config2.png)
+
+- 模版最终效果
    
    ![](../.gitbook/assets/grafana-dashboard-result.png)
 
+### 设置中文
+
+Home——>Administration——>General——>Default preferences——>Language，选择简体中文。
+
+![](../.gitbook/assets/grafana4.png)
+
+## 故障排除
+
+- 内核、网络、CPU 相关信息均不显示。似乎和 Proc 有关。
+
+待解决。
