--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.7-jie-telegraf+influxdb+grafana-jian-kong-ping-tai.md
@@ -176,7 +176,7 @@ mydb
 
 ### 配置数据源
 
-- 登录后点击左上角的 **Connections** -> 选择 **Connect data**
+- 登录后点击左上角的 **Connections** -> 选择 **Add new connection**
    
    ![grafana-datasource-add](../.gitbook/assets/grafana-datasource-add.png)
 
