--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
@@ -180,7 +180,7 @@ See /usr/local/share/doc/bash-completion/README.md for more information.
 
 编辑  `~/.bash_profile`，写入
 
-```sh
+```bash
 [[ $PS1 && -f /usr/local/share/bash-completion/bash_completion.sh ]] && source /usr/local/share/bash-completion/bash_completion.sh
 ```
 
