--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
@@ -8,7 +8,7 @@ csh（C shell，灵感来自 C 语言，语言亦类似，作者是 Bill Joy） 
 >
 > [ FreeBSD 14 中的 shell 被统一为了 sh](https://github.com/freebsd/freebsd-src/commit/d410b585b6f00a26c2de7724d6576a3ea7d548b7)。
 
-在 `/etc/csh.cshrc` 里面加入：
+在 `~/.csh.cshrc` 里面加入：
 
 ```sh
 alias ls ls –G
@@ -16,37 +16,45 @@ alias ls ls –G
 
 并重新登录即可。
 
->**技巧**
->
->如何让 FreeBSD 的 csh 像 bash 那样按 Tab 列出列出无法补齐的候选文件？
->
->按 `Ctrl+D`。
+---
 
-但如果一定要用 `Tab` 的话，在 `/etc/csh.cshrc`中加入：`set autolist`
+如何让 FreeBSD 的 csh 像 bash 那样按 Tab 列出列出无法补齐的候选文件？ 在 `~/.csh.cshrc` 中加入：
+
+```sh
+set filec
+set autolist
+```
+
+刷新环境变量：
+
+```
+# source ~/.cshrc 
+```
 
 ### 如何让 csh 像 zsh 那样具有命令错误修正呢
 
 比如你用 emacs 写 c 语言程序，但你输完 `emacs ma` 按 `Tab` 回车：他会匹配所有 `ma` 开头的文件。而这个是忽略掉，也即按 `Tab` 时不会再有你忽略的东西。编程友好，不用再匹配到二进制 `.o` 之类的文件，
 
 ```sh
-　set correct = cmd lz/usr/bin tcsh>ls /usr/bin (y|n|e|a)?
-　set fignore = (.o ~) emacs ma[^D] main.c main.c~ main.o emacs ma[tab] emacs main.c
+set correct = cmd lz/usr/bin tcsh>ls /usr/bin (y|n|e|a)?
+set fignore = (.o ~) emacs ma[^D] main.c main.c~ main.o emacs ma[tab] emacs main.c
 ```
 
 
-## 切换到 zsh：
+## 切换到 zsh
 
 ### 安装 zsh
 
 - 使用 pkg 安装：
 
 ```sh
-# pkg install zsh zsh-autosuggestions zsh-syntax-highlighting
+# pkg install zsh  zsh-completions zsh-autosuggestions zsh-syntax-highlighting
 ```
 
 |程序|说明|
 |:----:|:----:|
 |`zsh`|zsh shell|
+|`zsh-completions`|自动补全|
 |`zsh-autosuggestions`|类 Fish shell 的 Zsh 自动补全|
 |`zsh-syntax-highlighting`|类 Fish shell 的 Zsh 语法高亮|
 
@@ -54,6 +62,7 @@ alias ls ls –G
 
 ```sh
 # cd /usr/ports/shells/zsh/ && make install clean
+# cd /usr/ports/shells/zsh-completions && make install clean
 # cd /usr/ports/shells/zsh-autosuggestions/ && make install clean
 # cd /usr/ports/shells/zsh-syntax-highlighting/ && make install clean
 ```
@@ -100,6 +109,7 @@ chsh: user information updated
 ```sh
 source /usr/local/share/zsh-autosuggestions/zsh-autosuggestions.zsh
 source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
+fpath+=/usr/local/share/zsh/site-functions/
 ```
 
 立即使用：
@@ -107,6 +117,9 @@ source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 ```sh
 # zsh # 将当前 shell 切换到 zsh
 # source ~/.zshrc # 刷新环境变量
+# rm -f ~/.zcompdump; # 删除补全缓存
+# autoload -Uz compinit # 加载 compinit
+# compinit # 强制重建缓存
 ```
 
 #### 使用主题美化
