--- a/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
+++ b/di-15-zhang-freebsd-fang-huo-qiang/di-15.1-jie-wang-luo-can-shu-pei-zhi-ming-ling.md
@@ -165,3 +165,7 @@ net.inet.ip.fw.default_to_accept=1
 ```
 
 按字母 `d` 可以切换流量格式。按 `h` 可以查阅更多使用方法。
+
+## 参考文献
+
+- [FreeBSD 入门笔记](https://lvv.me/posts/2021/04/19_freebsd_101/)，作者 lvv.me
