删除错误引言

--- a/di-12-zhang-yin-dao-yu-hui-fu/12.6-refind.md
+++ b/di-12-zhang-yin-dao-yu-hui-fu/12.6-refind.md
@@ -23,7 +23,7 @@
 >
 >打开 `refind.conf`，在任意空白行加入：
 >
->```json
+>```ini
 >menuentry "FreeBSD" { 
 >	icon \EFI\refind\icons\os_freebsd.png 
 >	volume "FreeBSD"
@@ -51,13 +51,7 @@
 
 ![](../.gitbook/assets/shuang15.png)
 
-点击“添加”。
-
-![](../.gitbook/assets/shuang16.png)
-
-选中“refind_x64.efi”。
-
-![](../.gitbook/assets/shuang16-2.png)
+点击“添加”。选中“refind_x64.efi”。
 
 将其移动至顶部，设置为第一启动项。重启后测试效果。
 
